@@ -1,3 +1,9 @@
+2001-11-30  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02595]
+	* file.c (compression_decoder): add encodings
+	* file.c (readHeader): use compression_decoder->encodings
+
 2001-11-30  Tsutomu Okada <okada@furuno.co.jp>
 
 	* [w3m-dev 02593]
